--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "test": "promises-aplus-tests src/Test/index.js"
+  },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "promises-aplus-tests": "^2.1.2"
   }
 }
